[rce] fix(link panel): fixed link panel alignment inside of extend modal

--- a/rich-content-editor/src/Common/link-panel.scss
+++ b/rich-content-editor/src/Common/link-panel.scss
@@ -21,7 +21,6 @@
 .modal {
   position: relative;
   background-color: white;
-  width: 399px;
   // height: 179px; // this is the right margin - once radio buttons would be added back
   height: 148px;
   padding: 15px 24px;
