--- a/rich-content-editor/src/Styles/text-toolbar.scss
+++ b/rich-content-editor/src/Styles/text-toolbar.scss
@@ -20,5 +20,5 @@
 
 .extend {
   border-top: 1px solid rgba(117, 117, 117, 0.2);
-  padding: 10px 19px;
+  // padding: 10px 19px;
 }
